--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.1.0",
     "react-router": "^6.22.2",
     "react-router-dom": "^6.22.2",
+    "react-simple-star-rating": "^5.1.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
